--- a/pseudo.html
+++ b/pseudo.html
@@ -13,6 +13,27 @@
 
         h2:hover{
             color:black;
+            background-color: skyblue;
+        }
+
+        input:focus{
+            color:blue;
+            border:5px solid blueviolet;
+            
+        }
+        a:visited{
+            color:burlywood;
+        }
+
+        /* li:last-child{
+            color:red;
+        } */
+         /* li:first-child{
+            background-color: aqua;
+         } */
+        li:nth-child(2n){
+            color:blue;
+            font-weight:bold;
         }
 
     </style>
@@ -22,6 +43,26 @@
 <body>
     <h2>
         My Pseudo
+
     </h2>
+
+    <input type="text">
+    <input type="text">
+    <input type="text">
+
+    <a href="https://www.google.com/">Google</a>
+    <a href="https://www.toptal.com/designers/ui/figma-design-tool">Figma as design</a>
+
+    <ul>
+        <li>Anowar</li>
+        <li>Hossen</li>
+        <li>Hosain</li>
+        <li>Kiren</li>
+        <li>Kamal</li>
+        <li>Aziz</li>
+        <li>Abul</li>
+    </ul>
+
+
 </body>
 </html>
